Ready to deploy Home, Dashboard & Profile page Are done

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=investment-portfolio-tra-ebd09.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=850488957389
 VITE_FIREBASE_APP_ID=1:850488957389:web:3f3aa05739deb8c9214c84
 VITE_FIREBASE_MEASUREMENT_ID=G-CQ6S5BQG1Z
+VITE_FINNHUB_API_KEY=d46eir1r01qgc9esfrogd46eir1r01qgc9esfrp0
